2004-09-12  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/fusion.c (__pthread_ticks2ns_rt, __pthread_ns2ticks_rt):
	Use signed input/output.

	* skins/rtai/timer.c (rt_timer_ticks2ns, rt_timer_ns2ticks):
	Consider CONFIG_RTAI_HW_APERIODIC_TIMER when converting.

2004-09-11  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/hal/hal.c: Discard obsolete rthal_linux_context[] which
	is not used anymore.

	* include/nucleus/asm-i386/system.h (xnarch_switch_to): Finally
	unstaticalize cr0.

2004-09-09  Evgeny Sinelnikov <linux4sin@mail.ru>

	* configure.in, makefile, scripts/rtai-config.in: Correctly handle
	the --with-linux-dir configure option.

2004-09-07  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Obtain the calibration
	pod and thread memory from the system heap, not from the stack;
	the latter could cause misaligned FPU ops.
	(xnpod_init): Clear the rescheduling mask of all scheds at init.

2004-09-06  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.8.1-i386-r7c1.

2004-09-05  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_migrate_thread): Rename, export and use a
	single exit path.

	* nucleus/shadow.c (xnshadow_substitute_syscall): Do not
	substitute timing calls if the system timer has not been started.

	* nucleus/pod.c (xnpod_fault_handler): Make sure we propagate
	faults over shadows to Linux after they have been relaxed.

2004-09-04  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_calibrate_timer): Fix the way we
	calibrate the APIC programming time; the old way simply broke any
	SMP setup.

2004-09-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Make the calibration
	thread struct static, so that we can't get a TCB with a badly
	aligned FPU area.

2004-09-03  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-(i386|ppc)/system.h (__xnlock_get_irqsave):
	Avoid to enable interrupts in nested critical sections.
